# positronium

./: .gitignore  COPYING  Cargo.toml  Makefile  README.md  build.rs  limine.cfg  linker.ld
kernel/: Cargo.toml  lib.rs  log.rs
kernel/boot/protocol/: Cargo.toml  build.rs  lib.rs  main.rs  x86_64.rs
kernel/boot/protocol/x86_64/: mod.rs
kernel/hw/cpu/: Cargo.toml  lib.rs  x86_64.rs
kernel/hw/cpu/x86_64/: early_alloc.rs  gdt.rs  mod.rs
kernel/hw/io/: Cargo.toml  lib.rs
kernel/hw/io/serial/: Cargo.toml  lib.rs  x86_64.rs
kernel/logging/: Cargo.toml  lib.rs
lib/fmt/: Cargo.toml  lib.rs  pointers.rs
lib/math/: Cargo.toml  align.rs  lib.rs
lib/mem/: Cargo.toml  lib.rs  pointers.rs  string.rs
lib/strings/: Cargo.toml  lib.rs
lib/sync/: Cargo.toml  atomic.rs  lateinit.rs  lib.rs  waiter.rs
linker/: x86_64.ld
src/: main.rs
src/io/defs/: Cargo.toml
src/io/serial/: Cargo.toml  lib.rs  x86_64.rs
