[workspace]

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
kernel-io-defs = { path = "src/io/defs" }
kernel-io-serial = { path = "src/io/serial" }
x86_64 = "=0.15.1"

[package]
name = "positronium"
version.workspace = true
edition = "2021"

[dependencies]
limine = "0.2.0"
kernel-io-serial.workspace = true
kernel-io-defs.workspace = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"