[workspace]
members = ["kernel/boot/protocol"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
kernel.path = "kernel"
kernel-boot-protocol.path = "kernel/boot/protocol"
kernel-hw-cpu.path = "kernel/hw/cpu"
kernel-hw-io.path = "kernel/hw/io"
kernel-hw-io-serial.path = "kernel/hw/io/serial"
x86_64 = "=0.15.1"
limine = "=0.2.0"
spin = "=0.9.8"
linked_list_allocator = "=0.10.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"